# OpenGL_NeuralTexture

./: .gitignore  CMakeLists.txt  PBO.fragmentshader  PBO.vertexshader  README.md  TextureFragmentShader.fragmentshader  TransformVertexShader.vertexshader  background.fragmentshader  background.vertexshader  lyr_opengl_task1  main.cpp  simpleDepthShader.fragmentshader  simpleDepthShader.vertexshader
Vase/: Vase-obj.mtl  Vase-obj2.obj.mtl
basketball/: modify.py
common/: glad_shader.cpp  glad_shader.hpp  objloader.cpp  objloader.hpp
scripts/: frames2video.py  removebuildoutput.sh  testnpy.py
